// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiFlora Gateway handleBleAdvertisement() should produce an availability message when receiving Illuminance event as the first advertisement from the sensor 1`] = `
Array [
  Object {
    "device": Object {
      "friendlyName": "flower",
      "id": "a",
      "macAddress": "aa:bb",
      "rssi": 43,
      "timeout": 30000,
      "type": "miflora",
    },
    "id": "mock-uuid",
    "payload": Object {
      "state": "online",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "availability",
  },
]
`;

exports[`MiFlora Gateway handleBleAdvertisement() should produce an availability message when receiving Moisture event as the first advertisement from the sensor 1`] = `
Array [
  Object {
    "device": Object {
      "friendlyName": "flower",
      "id": "a",
      "macAddress": "aa:bb",
      "rssi": 43,
      "timeout": 30000,
      "type": "miflora",
    },
    "id": "mock-uuid",
    "payload": Object {
      "state": "online",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "availability",
  },
]
`;

exports[`MiFlora Gateway handleBleAdvertisement() should produce an availability message when receiving Soil Conductivity event as the first advertisement from the sensor 1`] = `
Array [
  Object {
    "device": Object {
      "friendlyName": "flower",
      "id": "a",
      "macAddress": "aa:bb",
      "rssi": 43,
      "timeout": 30000,
      "type": "miflora",
    },
    "id": "mock-uuid",
    "payload": Object {
      "state": "online",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "availability",
  },
]
`;

exports[`MiFlora Gateway handleBleAdvertisement() should produce an availability message when receiving Temperature event as the first advertisement from the sensor 1`] = `
Array [
  Object {
    "device": Object {
      "friendlyName": "flower",
      "id": "a",
      "macAddress": "aa:bb",
      "rssi": 43,
      "timeout": 30000,
      "type": "miflora",
    },
    "id": "mock-uuid",
    "payload": Object {
      "state": "online",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "availability",
  },
]
`;

exports[`MiFlora Gateway observeUnavailableDevices() should produce unavailability messages for ruuvitags that haven't been observed inside timeout 1`] = `
Object {
  "device": Object {
    "friendlyName": "flower",
    "id": "a",
    "macAddress": "a",
    "rssi": null,
    "timeout": 30000,
    "type": "miflora",
  },
  "id": "mock-uuid",
  "payload": Object {
    "state": "offline",
  },
  "time": Any<DateTime>,
  "type": "availability",
}
`;
